--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 
 <head>
-    <link href="css/main.css" type="text/css" rel="stylesheet">
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="css/main.css" type="text/css" rel="stylesheet">
     <title>Conquer Clone Project</title>
 </head>
 
@@ -15,8 +16,8 @@
         <div class="nav">
             <ul class="navbar-menu">
                 <li><a href="#Section1">Homepage</a></li>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Services</a></li>
+                <li><a href="#Section2">About Us</a></li>
+                <li><a href="#Services">Services</a></li>
                 <li><a href="#">Contact</a></li>
                 <li><a href="#">External</a></li>
             </ul>
@@ -24,43 +25,169 @@
     </nav>
 
     <div id="Section1">
-        <header class="header-section" id="header-intro">
-            <div class="header-container">
-                <h1 class="main-tag">Conquer</h1>
-                <p class="main-byline">A clone project by Glory Kingzman</p>
+        <section>
+            <header class="header-section" id="header-intro">
+                <div class="overlay"></div>
+                <div class="header-container">
+                    <h1 class="main-tag">Conquer</h1>
+                    <p class="main-byline">A clone project by Glory Kingzman</p>
+                </div>
+            </header>
+        </section>
+    </div>
+    <div id="Section2" class="feature-area">
+        <section class="About-area">
+            <div class="About">
+                <div class="About-content">
+                    <div class="first-content">
+                        <img src="img/1-1.jpg" alt="first image">
+                        <h2 class="About-content-title green-text">Bootstrap v3.3.6</h2>
+                        <p class="content-descriprion">Morbi sagittis justo a velit placerat ullamcorper quis quis velit. Sed convallis at risus ullamcorper auctor. Praesent quis velit neque. Quisque semper porta nisi vitae suscipit. Duis lectus magna, ornare ac scelerisque.</p>
+                        <a href="#" class="Content-btn green-btn">Button Green</a>
+                    </div>
+                </div>
+                <div class="About-content">
+                    <div class="Second-content">
+                        <img src="img/1-2.jpg" alt="Second image">
+                        <h2 class="About-content-title blue-text">Responsive Design</h2>
+                        <p class="content-descriprion">Conquer Template is provided by templatemo for free of charge. You can use this template for any kind of website. No credit link is required. All images by Unsplash. Thank you for visiting our website. Please come again!</p>
+                        <a href="#" class="Content-btn blue-btn">See Details</a>
+                    </div>
+
+                </div>
+                <div class="About-content">
+                    <div class="Third-content">
+                        <img src="img/1-3.jpg" alt="Third image">
+                        <h2 class="About-content-title gray-text">Responsive Design</h2>
+                        <p class="content-descriprion">Conquer Template is provided by templatemo for free of charge. You can use this template for any kind of website. No credit link is required. All images by Unsplash. Thank you for visiting our website. Please come again!</p>
+                        <a href="#" class="Content-btn red-btn">Button red</a>
+                    </div>
+
+                </div>
             </div>
-        </header>
+        </section>
+        <Section id="blog-area">
+            <div class="blog-container">
+
+                <div class="blog-content">
+                    <img src="img/2-1.jpg" alt="blog image">
+                    <h2 class="blog-title">Two Column Left Side</h2>
+                    <p class="blog-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam tempor eros eget eros maximus, ut cursus sem euismod. Donec iaculis tristique odio at consectetur. Nullam dignissim varius suscipit. Sed in leo sit amet velit finibus pretium.
+                        <br>
+                        <br> Vestibulum vel mauris at erat mattis accumsan et ac lorem. Cras non venenatis orci, sed tincidunt massa. Duis nisl lectus, auctor eu sodales at, dignissim eu orci. Sed vitae venenatis magna, in blandit metus.
+                    </p>
+
+                </div>
+
+                <div class="blog-content">
+                    <img src="img/2-2.jpg" alt="blog image">
+                    <h2 class="blog-title">Two Column Right Side</h2>
+                    <p class="blog-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam tempor eros eget eros maximus, ut cursus sem euismod. Donec iaculis tristique odio at consectetur. Nullam dignissim varius suscipit. Sed in leo sit amet velit finibus pretium.
+                        <br>
+                        <br> Vestibulum vel mauris at erat mattis accumsan et ac lorem. Cras non venenatis orci, sed tincidunt massa. Duis nisl lectus, auctor eu sodales at, dignissim eu orci. Sed vitae venenatis magna, in blandit metus.
+                    </p>
+                    <span class="blog-btn"><a href="#">Read more</a></span>
+                </div>
+            </div>
+        </Section>
+    </div>
+
+    <div id="Services">
+        <section id="Service-main" class="service-area">
+            <div class="Service">
+                <div class="Service-container">
+                    <div class="Service-title">
+                        <h2 class="Our-serv">Our Services</h2>
+                        <p class="service-description">Nunc diam leo, fringilla vulputate elit lobortis, consectetur vestibulum quam. Sed id
+                            <br> felis ligula. In euismod libero at magna dapibus, in rutrum velit lacinia.
+                            <br> Etiam a mi quis arcu varius condimentum.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="Testimonial-area">
+            <div class="Testimony-container">
+                <div class="testimony-content">
+                    <img src="/img/4-1.jpg">
+                    <h2 class="Test-title">Column One</h2>
+                    <p class="Test-description">Ut ac odio scelerisque ante ornare commodo. Sed faucibus dui libero, in tincidunt purus pretium quis. Fusce posuere egestas enim eu viverra.</p>
+
+                </div>
+                <div class="testimony-content">
+                    <img src="/img/4-2.jpg">
+                    <h2 class="Test-title">Column Two</h2>
+                    <p class="Test-description">Ut ac odio scelerisque ante ornare commodo. Sed faucibus dui libero, in tincidunt purus pretium quis. Fusce posuere egestas enim eu viverra.</p>
+                    <span class="Test-btn"><a href="#">Read it</a></span>
+                </div>
+                <div class="testimony-content">
+                    <img src="/img/4-3.jpg">
+                    <h2 class="Test-title">Column Three</h2>
+                    <p class="Test-description">Ut ac odio scelerisque ante ornare commodo. Sed faucibus dui libero, in tincidunt purus pretium quis. Fusce posuere egestas enim eu viverra.</p>
+
+                </div>
+                <div class="testimony-content">
+                    <img src="/img/4-4.jpg">
+                    <h2 class="Test-title">Column Four</h2>
+                    <p class="Test-description">Ut ac odio scelerisque ante ornare commodo. Sed faucibus dui libero, in tincidunt purus pretium quis. Fusce posuere egestas enim eu viverra.</p>
+                    <span class="Test-btn"><a href="#">Details</a></span>
+                </div>
+            </div>
+        </section>
+        <section id="big-section-column">
+            <div class="big-container">
+                <div class="big-column-content">
+                    <img src="/img/4-5.jpg">
+                    <h2 class="big-column-title">One Big Column</h2>
+                    <p class="big-column-description desc1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam tempor eros eget eros maximus, ut cursus sem euismod. Donec iaculis tristique odio at consectetur. Nullam dignissim varius suscipit. Sed in leo sit amet velit finibus pretium.
+                        Vivamus dictum nisi ac fermentum interdum. Vestibulum vel mauris at erat mattis accumsan et ac lorem. Cras non venenatis orci, sed tincidunt massa. Duis nisl lectus, auctor eu sodales at, dignissim eu orci. Sed vitae venenatis
+                        magna, in blandit metus. Praesent volutpat cursus rhoncus. Aenean arcu diam, suscipit ac neque in, sollicitudin convallis orci.
+                    </p>
+                    <p class="big-column-description desc">Fusce eu porta massa, sed tincidunt turpis. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vivamus a urna tellus. Integer pharetra vitae nisi et lacinia. Morbi sagittis justo a velit placerat
+                        ullamcorper quis quis velit. Sed convallis at risus ullamcorper auctor. Praesent quis velit neque. Quisque semper porta nisi vitae suscipit. Duis lectus magna, ornare ac scelerisque quis, maximus eget nisi.
+                    </p>
+                    <span class="big-column-btn"><a href="#">Read More</a></span>
+                </div>
+            </div>
+        </section>
 
     </div>
-    <div id="Section2">
-        <div class="About">
-            <div class="About-content">
-                <div class="first-content">
-                    <img src="img/1-1.jpg" alt="first image">
-                    <h2 class="About-content-title green-text">Bootstrap v3.3.6</h2>
-                    <p class="content-descriprion">Morbi sagittis justo a velit placerat ullamcorper quis quis velit. Sed convallis at risus ullamcorper auctor. Praesent quis velit neque. Quisque semper porta nisi vitae suscipit. Duis lectus magna, ornare ac scelerisque.</p>
-                    <a href="#" class="Content-btn green-btn">Button Green</a>
-                </div>
-            </div>
-            <div class="About-content">
-                <div class="Second-content">
-                    <img src="img/1-2.jpg" alt="Second image">
-                    <h2 class="About-content-title blue-text">Responsive Design</h2>
-                    <p class="content-descriprion">Conquer Template is provided by templatemo for free of charge. You can use this template for any kind of website. No credit link is required. All images by Unsplash. Thank you for visiting our website. Please come again!</p>
-                    <a href="#" class="Content-btn blue-btn">See Details</a>
+    <div id="contact-area">
+        <section class="contact-section">
+            <div class="contact-container">
+
+                <div class="contact-content">
+                    <h1>Contact Form</h1>
+
+                    <div class="contact-main">
+                        <p>Nunc diam leo, fringilla vulputate elit lobortis, consectetur vestibulum quam. Sed id <br> felis ligula. In euismod libero at magna dapibus, in rutrum velit lacinia. <br> Etiam a mi quis arcu varius condimentum.</p>
+                    </div>
+
+
                 </div>
 
-            </div>
-            <div class="About-content">
-                <div class="Third-content">
-                    <img src="img/1-3.jpg" alt="Third image">
-                    <h2 class="About-content-title gray-text">Responsive Design</h2>
-                    <p class="content-descriprion">Conquer Template is provided by templatemo for free of charge. You can use this template for any kind of website. No credit link is required. All images by Unsplash. Thank you for visiting our website. Please come again!</p>
-                    <a href="#" class="Content-btn red-btn">Button red</a>
-                </div>
 
+
+                <form action="#" method="post" class="contact-form form-grid">
+                    <div class="contact-form-left">
+                        <div class="form-group">
+                            <input name="name" type="text" class="form-control" id="name" placeholder="Name">
+                            <input type="email" name="email" class="form-control" id="mail" placeholder="Email">
+                            <input name="subject" type="text" class="form-control" id="subject" placeholder="Subject">
+                        </div>
+                    </div>
+                    <div class="contact-form-right">
+                        <div class="form-group">
+                            <textarea name="message" rows="6" class="form-control" id="comment" placeholder="Your message here..."></textarea>
+                            <button type="submit" class="btn btn-default">Send</button>
+                        </div>
+                    </div>
+                </form>
             </div>
-        </div>
+    </div>
+    </div>
+    </section>
+    </div>
 </body>
 
 </html>
